test/cases/bad/bad035.lat
// Only class can be instantiated

int main() {
    new int[];
    return 0;
}